# ahc030

./: .gitignore  Cargo.toml  README.md  run.sh
src/: sample.py
tools/: seeds.py  seeds.txt
tools/in/: 0101.txt  0102.txt  0103.txt  0104.txt  0105.txt  0106.txt  0107.txt  0108.txt  0109.txt  0110.txt  0111.txt  0112.txt  0113.txt  0114.txt  0115.txt  0116.txt  0117.txt  0118.txt  0119.txt  0120.txt  0121.txt  0122.txt  0123.txt  0124.txt  0125.txt  0126.txt  0127.txt  0128.txt  0129.txt  0130.txt  0131.txt  0132.txt  0133.txt  0134.txt  0135.txt  0136.txt  0137.txt  0138.txt  0139.txt  0140.txt  (+1363 more)
tools/src/: lib.rs
