[package]
name = "ahc030"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
petgraph = "0.6.4"
proconio = { version = "0.4.5", features = ["derive"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
superslice = "1.0.0"
libm = "0.2.8"

[features]
default = ["local"]
local = []
